# catheter_arduino_controller

./: .gitignore  .travis.yml  README.md  README.txt  README2.txt  install_dependencies.sh
doc/: CommunicationProtocol.txt  TODO.txt
play_files/: PSRD.play  multiple_cmds_at_once.play  test_150_all.play  test_150_single.play  test_300_all.play
src/catheter_arduino_ard_ide/: ard_due_defs.h  catheter_arduino_ard_ide.ino  cmd_parse.h  cmd_support.h  pin_defs.h  serial_com_ard.h  spi_com.h
src/catheter_arduino_gui/: CMakeLists.txt  package.xml
src/catheter_arduino_gui/data/: test_case.play
src/catheter_arduino_gui/inc/com/: catheter_commands.h  common_utils.h  communication_definitions.h  pc_utils.h
src/catheter_arduino_gui/inc/gui/: catheter_grid.h  catheter_gui.h  status_frame.h  status_text.h
src/catheter_arduino_gui/inc/hardware/: digital_analog_conversions.h
src/catheter_arduino_gui/inc/ser/: serial_sender.h  serial_thread.h  simple_serial.h
src/catheter_arduino_gui/src/com/: catheter_commands.cpp  common_utils.cpp  pc_utils.cpp
src/catheter_arduino_gui/src/gui/: catheter_grid.cpp  catheter_gui.cpp  status_frame.cpp  status_text.cpp
src/catheter_arduino_gui/src/hardware/: digital_analog_conversions.cpp
src/catheter_arduino_gui/src/ser/: serial_sender.cpp  serial_thread.cpp  simple_serial.cpp
src/catheter_arduino_gui/test/: test_pc_utils.cpp
src/matlab_src/: .gitignore  startup.m
src/matlab_src/m_files/: Experiment_Currents.m  aprbs_func.m  fun_generate_play_file.m  fun_reset_arduino.m  fun_send_current_list.m  fun_send_serial_data.m  generateAPRBS.m  generateChirp.m  generateChirp2.m  generatePNSequence.m  generate_pseudo_random.m  prbs2.m  prbsTest.m  prototype6_4.play  prototype6_4_axialCoilActiviation_DF.play  prototype6_4_firstThreeChannels.play  ramp_001.play  ramp_002.play  ramp_003.play  ramp_004.play  ramp_005  ramp_007  ramp_010  ramp_015  ramp_10.play  send_current_table.m
src/matlab_src/matlab_mex/: compile.m  mexPacketBytesFromCurrents.cpp  mex_utils.cpp  mex_utils.h
visual_studio/catheter_arduino_sln/: .gitignore  catheter_arduino.sln  local_Example.props  robosurgery_global.props
visual_studio/catheter_arduino_sln/catheter_arduino_gui/: .gitignore  catheter_arduino_gui.vcxproj  catheter_arduino_gui.vcxproj.filters  todo.txt
